# codex-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.generated/ts/: InitializeResult.ts  McpServerInfo.ts  ResponseItem.ts  index.ts
.github/workflows/: ci.yml  codex-autoreview.yml  draft-release.yml  publish.yml  release-published.yml
codex/: __init__.py  _binary.py  _config_types.py  _file_utils.py  _runtime.py  _turn_options.py  api.py  codex.py  config.py  dynamic_tools.py  errors.py  events.py  exec.py  items.py  options.py  output_schema.py  output_schema_file.py  thread.py
codex/app_server/: __init__.py  _async_client.py  _async_services.py  _async_threads.py  _helpers.py  _payloads.py  _protocol_helpers.py  _session.py  _sync_client.py  _sync_services.py  _sync_support.py  _sync_threads.py  client.py  errors.py  models.py  options.py  transports.py
codex/protocol/: __init__.py  runtime.py  types.py
crates/codex_native/: Cargo.toml
crates/codex_native/codex/: __init__.py
crates/codex_native/src/: lib.rs
docs/: app_server.md  app_server_advanced.md  exec_api.md
examples/: app_server_conversation.py  app_server_dynamic_tool.py  app_server_stream_events.py  app_server_tool_handler.py  app_server_websocket_conversation.py  basic_conversation.py  basic_dynamic_tool.py
scripts/: codex_autoreview.py  fetch_codex_binary.py  generate_protocol_py.py  generate_protocol_types.py  postprocess_protocol_types.py  postprocess_schema_titles.py  update_version_py.cjs
tests/: test_api.py  test_api_features.py  test_app_server_async_client.py  test_app_server_client.py  test_app_server_helpers.py  test_app_server_session.py  test_app_server_transports.py  test_async_api.py  test_client.py  test_codex_public_api.py  test_config_overrides.py  test_dynamic_tools.py  test_examples.py  test_examples_compile.py  test_fetch_codex_binary.py  test_import_boundaries.py  test_integration_real_binary.py  test_output_schema.py  test_package_metadata.py  test_protocol_codegen.py  test_protocol_generation_scripts.py  test_release_workflows.py  test_runtime.py  test_smoke.py  test_stream_interaction.py  test_version.py
