[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "codex-python"
description = "Python SDK for Codex CLI with bundled platform binaries"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["codex", "sdk", "cli", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://github.com/gersmann/codex-python"
Repository = "https://github.com/gersmann/codex-python"
Issues = "https://github.com/gersmann/codex-python/issues"

[tool.maturin]
# Point maturin to the Rust crate and include this repository's Python sources.
manifest-path = "crates/codex_native/Cargo.toml"
python-packages = ["codex"]
include = [{ path = "codex/vendor/**/*", format = ["sdist", "wheel"] }]

# Development dependency groups (used by uv)
[dependency-groups]
dev = [
  "ruff>=0.13.1",
  "pytest>=8",
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["codex-proj", ".generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "^codex-proj/",
  "^\\.generated/",
  "^crates/codex_native/codex/",
  "^crates/.*/target/",
  "^dist/",
]
