[package]
name = "codex_native"
version = "0.4.0"
edition = "2021"

[lib]
name = "codex_native"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312", "experimental-inspect", "generate-import-lib"] }

# Tell maturin to include the Python sources from the repo root (mixed project)
[package.metadata.maturin]
python-source = "../../"
name = "codex-python"
